--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,1 +1,9 @@
-/*  */
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 700px;
+    
+}
