--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -10,3 +10,14 @@ h1 {
     border-radius: 20px;
     
 }
+h2 {
+    font-size: 40px;
+}
+
+#search-button {
+    background-color: brown;
+}
+
+#clear {
+    background-color: aquamarine;
+}
